Fix env.ini for TX2 NX board

--- a/scripts/env.ini
+++ b/scripts/env.ini
@@ -8,10 +8,9 @@ RELEASE=bionic
 REPO=http://ports.ubuntu.com/ubuntu-ports
 
 [target]
-JETSON_BOARD=jetson-tx2-devkit
+JETSON_BOARD=jetson-xavier-nx-devkit-tx2-nx
 JETSON_STORAGE=mmcblk0p1
-JETSON_BOARD_IMG=jetson-tx2
-JETSON_BOARD_REV=300
+JETSON_BOARD_REV=
 JETSON_PLAT=t186
 JETSON_REL=r32.6
 JETSON_BSP=jetson_linux_r32.6.1_aarch64.tbz2
