--- a/scripts/env.ini
+++ b/scripts/env.ini
@@ -24,9 +24,7 @@ DRIVER_SOURCES_ARCHIVE=public_sources.tbz2
 DRIVER_SOURCES_ARCHIVE_URL=https://developer.nvidia.com/embedded/l4t/r32_release_v6.1/sources/t186/public_sources.tbz2
 
 [directories]
-ROOT_DIR="${HOME}/jetson-custom/rootfs"
-WORK_DIR="${HOME}/jetson-custom/build"
-ART_DIR="${HOME}/jetson-custom/artifacts"
+WORK_DIR=${HOME}/jetson/workspace"
 
 [users]
 ROOT_PWD=root
