--- a/scripts/env.ini
+++ b/scripts/env.ini
@@ -24,7 +24,7 @@ DRIVER_SOURCES_ARCHIVE=public_sources.tbz2
 DRIVER_SOURCES_ARCHIVE_URL=https://developer.nvidia.com/embedded/l4t/r32_release_v6.1/sources/t186/public_sources.tbz2
 
 [directories]
-WORK_DIR=${HOME}/jetson/workspace"
+WORK_DIR=${HOME}/jetson/workspace
 
 [users]
 ROOT_PWD=root
@@ -39,3 +39,4 @@ JETSON_DESKTOP=
 [network]
 WIFI_SSID=jetson
 WIFI_PASS=jetson
+
