Fix sample-docker.yml by adding arm64 to --platform argument

--- a/.github/workflows/sample-docker.yml
+++ b/.github/workflows/sample-docker.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build the Docker image
-        run: docker buildx build . --file sample-docker/Dockerfile --tag sample-docker:$(date +%s) --platform
+        run: docker buildx build . --file sample-docker/Dockerfile --tag sample-docker:$(date +%s) --platform arm64
