--- a/.github/workflows/sample-docker.yml
+++ b/.github/workflows/sample-docker.yml
@@ -3,7 +3,8 @@ name: Docker Image CI
 on:
   push:
     paths:
-      'sample-docker/Dockerfile'
+      - '.github/workflows/sample-docker.yml'
+      - 'sample-docker/**'
     branches: [ main ]
 
 jobs:
@@ -19,8 +20,34 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Checkout code
+      - 
+        name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build the Docker image
-        run: docker buildx build . --file sample-docker/Dockerfile --tag sample-docker:$(date +%s) --platform arm64
+      - 
+        name: Cache Docker layers
+        uses: actions/cache@v
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os  }}-buildx-
+
+      - 
+        name: Build and (not) push
+        uses: docker/build-push-action@v2
+        with:
+          context: sample-docker
+          file: sample-docker/Dockerfile
+          push: false
+          tags: user/sample-docker:latest
+          platforms: linux/arm64
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+      -
+        name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
