--- a/.github/workflows/sample-docker.yml
+++ b/.github/workflows/sample-docker.yml
@@ -26,7 +26,7 @@ jobs:
 
       - 
         name: Cache Docker layers
-        uses: actions/cache@v
+        uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ github.sha }}
