Add SOC argument to sample-docker

--- a/sample-docker/Dockerfile
+++ b/sample-docker/Dockerfile
@@ -7,8 +7,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         ca-certificates \
  && rm -rf /var/lib/apt/lists/*
 
+ARG SOC=t186
 RUN echo "deb https://repo.download.nvidia.com/jetson/common r32.6 main" >> /etc/apt/sources.list \
- && echo "deb https://repo.download.nvidia.com/jetson/t186 r32.6 main" >> /etc/apt/sources.list \
+ && echo "deb https://repo.download.nvidia.com/jetson/${SOC} r32.6 main" >> /etc/apt/sources.list \
  && apt-key adv --fetch-key http://repo.download.nvidia.com/jetson/jetson-ota-public.asc \
  && mkdir -p /opt/nvidia/l4t-packages/ \
  && touch /opt/nvidia/l4t-packages/.nv-l4t-disable-boot-fw-update-in-preinstall \
