--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Create Image CI
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
     branches: [ image_build ]
 
 jobs:
-  sample-docker-build:
+  build:
 
     runs-on: ubuntu-18.04
 
@@ -26,4 +26,32 @@ jobs:
           context: .
           push: false
           tags: user/image-tools:latest
+
+  test:
+
+    needs: build
+    runs-on: ubuntu-18.04
+
+    steps:
+      -
+        name: Create image
+        run: |
+          docker run --rm --privileged --env-file env.list --volume ~/workdir:/workdir user/image-tools:latest ./create_image_tarball
+
+      -
+        name: Rebuild kernel
+        run: |
+          docker run --rm --privileged --env-file env.list --volume ~/workdir:/workdir user/image-tools:latest ./customize_kernel
+
+  clean:
+
+    if: always()
+    needs: test
+    runs-on: ubuntu-18.04
+
+    steps:
+      -
+        name: Remove workdir
+        run: |
+          rm -rf ~/workdir
 
