--- a/.github/workflows/sample-docker.yml
+++ b/.github/workflows/sample-docker.yml
@@ -6,26 +6,26 @@ on:
       - '.github/workflows/sample-docker.yml'
       - 'sample-docker/**'
     branches: [ main ]
+  pull_request:
+    paths:
+      - '.github/workflows/sample-docker.yml'
+      - 'sample-docker/**'
+    branches: [ main ]
 
 jobs:
   build:
-
     runs-on: ubuntu-18.04
 
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - 
-        name: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - 
-        name: Build and (not) push
+      - name: Build and (not) push
         uses: docker/build-push-action@v2
         with:
           context: sample-docker
