Fix env.list path in workflow

--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Test
         run: |
-          docker run --rm --privileged --env-file env.list --volume ~/workdir:/workdir ${{ steps.prep.outputs.tagged_image }} ./create_custom_base_image_tarball.sh
+          docker run --rm --privileged --env-file tools/env.list --volume ~/workdir:/workdir ${{ steps.prep.outputs.tagged_image }} ./create_custom_base_image_tarball.sh
 
       - name: Clean
         if: always()
