--- a/.github/workflows/base-image.yml
+++ b/.github/workflows/base-image.yml
@@ -43,6 +43,7 @@ jobs:
           tags: ${{ steps.prep.outputs.tagged_image }},${{ steps.prep.outputs.latest_image }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          load: true
 
       - name: Test
         run: |
