Add sample user to sample-app

--- a/sample-app/Dockerfile
+++ b/sample-app/Dockerfile
@@ -3,6 +3,7 @@ FROM nvcr.io/nvidia/l4t-base:r32.6.1
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
+        sudo \
         gnupg \
         ca-certificates \
  && rm -rf /var/lib/apt/lists/*
@@ -20,6 +21,21 @@ RUN apt update \
  && apt-get install -y --no-install-recommends -o Dpkg::Options::=--force-confnew \
         nvidia-l4t-jetson-multimedia-api \
  && rm -rf /var/lib/apt/lists/*
+
+ARG USER_UID=1000
+ARG USER_GID=1000
+WORKDIR /tmp
+RUN groupadd -r user -g ${USER_GID} \
+ && useradd -u ${USER_UID} -r -g user -m -d /user -s /sbin/nologin -c "" user \
+ && adduser user sudo \
+ && adduser user root \
+ && mkdir -m a=rwx -p /user \
+ && echo "user ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/user \
+ && chmod 0440 /etc/sudoers.d/user \
+ && sudo usermod -a -G video user \
+ && rm -rf /tmp/*
+
+USER user
 
 ENTRYPOINT [ "/bin/bash" ]
 
